# longeval2026task1

./: .gitignore  ADAPTIVE_REINDEX_DESIGN.md  AGENT.MD  MIGRATION.md  MODEL_OVERVIEW.md  README.md  TEMPORAL_CITATION_FEATURES.md  TEMPORAL_FEATURES_DESIGN.md  TEMPORAL_METRICS.md  pyproject.toml  quick_data_test.py  requirements.txt
.claude/: settings.local.json
adaptive_monitor/: README.md  collection_analytics.py  daily_split_eval.py  incremental_reindex.py  index_membership_dataset.py  march_baseline_eval.py  reindex_pipeline.py  scenario_comparison.py  trigger_decision.py
configs/: README.md  all_snapshots_reporting.yaml  bm25_pt.yaml  custom_dense_rerank.yaml  custom_hybrid_union_rerank.yaml  custom_lexical_fulltext.yaml  custom_lexical_fulltext_temporal.yaml  custom_lexical_fulltext_temporal_citation.yaml  custom_title_abstract_rerank.yaml  custom_title_abstract_rerank_additive.yaml  custom_title_abstract_rerank_citation_only.yaml  custom_title_abstract_rerank_router.yaml  custom_title_abstract_rerank_temporal.yaml  custom_title_abstract_rerank_temporal_citation.yaml  custom_title_abstract_rm3.yaml  custom_title_abstract_rm3_temporal.yaml  dense_pt.yaml  dense_rerank.yaml  local_fixture_dense_rerank.yaml  official_pyterrier.yaml  official_pyterrier_dense.yaml  official_pyterrier_dense_temporal.yaml  official_pyterrier_temporal.yaml  official_pyterrier_temporal_citation.yaml  shared_defaults.yaml  snapshot1_monthly_eval.yaml
scripts/: activate_longeval_env.ps1  build_all_models_train_report.py  build_bm25_index.py  build_dense_index.py  build_indices.py  (+23 more)
(+235 files in other folders)
