[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longeval-sci"
version = "0.3.0"
description = "Production-ready baseline experimentation for LongEval 2026 Task 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "ir-datasets-longeval>=0.0.12",
]

[project.optional-dependencies]
baselines = [
  "python-terrier>=1.0",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "pytrec_eval-terrier>=0.5.6",
  "openai>=2.0.0",
  "pyterrier-dr>=0.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
